--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bunty Portfolio</title>
+    <title>Bunty Ishi Portfolio</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,22 +13,22 @@
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="div">
     <h1 class="rohit" id="color">Rohit Ishi's Portfolio</h1>
     <h2 class="rohit">I'm a Web Developer</h2><br>
-    <hr/><br/>
-    <h2 id="second" class="movie"><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2><br/>
+    <hr/></div><br/>
+    <h2 class="movie"><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2><br/>
     <img src="./assets/images/movie list.jpg" class="image" height="300"/>
 <br/>
 <br/>
 <br/>
 <h2 class="movie" id="birthday"><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
 
-<img id="second" src="./assets/images/birthday.jpg" class="image" height="300"/>
+<img draggable="false" id="second" src="./assets/images/birthday.jpg" class="image" height="300"/>
 
 <br/>
 <hr/>
 <a class="last" href="./public/about.html">About Me</a>
 <a class="right" href="./public/contact.html">Contact Me</a>
-
 </body>
 </html>
